# nRF52832

./: CMakeLists.txt  Kconfig  prj.conf  prj_minimal.conf
image/: zephyr2024_1126.hex
src/: main.c
src/common/: compile_date.h
src/m_ble/: CMakeLists.txt  Kconfig.ble  m_ble.c  m_ble.h
src/m_event/: CMakeLists.txt  CMakeLists.txt.bak  m_event_def.c  m_event_def.h  m_event_queue.c.bak  m_event_queue.h
